--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
 
-    needs: build
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v1
@@ -23,11 +23,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-    - uses: actions/download-artifact@master
-      with:
-        name: webpack artifacts
-        path: public
-    - name: npm install, and test
+      matrix:
         os: [ubuntu-lastest, windows-2016]
         node-version: [8.x, 10.x]
 
